added interactive js elements

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -76,7 +76,7 @@
                     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
                     <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                         <br><br>
-                        <img class="img-responsive img-centered" src="./img/DiyaNair.png" alt="">
+                        <img class="img-responsive img-centered" src="img/DiyaNair.png" alt="">
                         <br><br>
                         <p style="font-size: 20px" class="text-intro">Hey there, I'm Diya! I'm passionate about the power of data and technology for social good. I am currently working on my B.A. in Computer Science and double minor in Philosophy + Science and Public Policy from Barnard College, Columbia University.</p>
                         <br>
@@ -99,21 +99,21 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <div class="emoji-container">
-                        <img src="./img/programming.png" alt="Programming Emoji" class="emoji">
+                        <img src="img/programming.png" alt="Programming Emoji" class="emoji">
                     </div>
                     <h4 class="service-heading">Programming</h4>
                     <p class="text-muted">3+ years of coding experience in Python, Java, C, and HTML/CSS.</p>
                 </div>
                 <div class="col-md-4">
                     <div class="emoji-container">
-                        <img src="./img/data.png" alt="Data Analysis Emoji" class="emoji">
+                        <img src="img/data.png" alt="Data Analysis Emoji" class="emoji">
                     </div>
                     <h4 class="service-heading">Data Analysis</h4>
                     <p class="text-muted">3+ years of experience in independent data visualization projects, data journalism, and research experience in sentiment analysis using R and Natural Language Processing.</p>
                 </div>
                 <div class="col-md-4">
                     <div class="emoji-container">
-                        <img src="./img/leadership.png" alt="Leadership Emoji" class="emoji">
+                        <img src="img/leadership.png" alt="Leadership Emoji" class="emoji">
                     </div>
                     <h4 class="service-heading">Leadership</h4>
                     <p class="text-muted">Recognized for 3+ years of STEM advocacy for womxn and late bloomers. 2+ years of experience leading the Data and Graphics team at the Columbia Daily Spectator as a Deputy Editor.</p>
@@ -787,23 +787,24 @@
     </div>
 
     <!-- jQuery Version 1.11.0 -->
-    <script src="/js/jquery-1.11.0.js"></script>
+    <script src="js/jquery-1.11.0.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="/js/jquery.easing.min.js"></script>
-    <script src="/js/classie.js"></script>
-    <script src="/js/cbpAnimatedHeader.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/classie.js"></script>
+    <script src="js/cbpAnimatedHeader.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="/js/jqBootstrapValidation.js"></script>
-    <script src="/js/contact_me.js"></script>
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="/js/agency.js"></script>
+    <script src="js/agency.js"></script>
 
 </body>
 
 </html>
+
