--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="files/Nair_Diya_Resume.pdf">CV</a>
+                        <a class="page-scroll" href="files/Diya_Nair_Resume.pdf">CV</a>
                     </li>
                 </ul>
             </div>
